--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,2 +1,41 @@
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
+
+$color-orange: hsl(26, 100%, 55%);
+$color-grayish-blue: hsl(220, 14%, 75%);
+$color-light-grayish-blue: hsl(223, 64%, 98%);
+$color-white: hsl(0, 0%, 100%);
+
+.nav-item {
+  border-bottom: none;
+
+  &:hover {
+    border-bottom: solid 5px $color-orange;
+  }
+}
+
+.text-orange {
+  color: $color-orange;
+  font-weight: 700;
+}
+
+.btn-orange {
+  background-color: $color-orange;
+  border: none;
+}
+
+input[type="number"] {
+  border: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
