--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,10 +1,18 @@
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
 
+$color-pale-orange: hsl(25, 100%, 94%);
 $color-orange: hsl(26, 100%, 55%);
 $color-grayish-blue: hsl(220, 14%, 75%);
 $color-light-grayish-blue: hsl(223, 64%, 98%);
 $color-white: hsl(0, 0%, 100%);
+
+$font-body: "Kumbh Sans", sans-serif;
+
+body {
+  font-family: $font-body;
+}
 
 .nav-item {
   border-bottom: none;
