--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -32,6 +32,15 @@ body {
   border: none;
 }
 
+#input-group {
+  width: 25%;
+}
+
+.btn-add-cart {
+  padding: 0.6rem 5rem;
+  margin-left: 1rem;
+}
+
 input[type="number"] {
   border: none;
 }
@@ -46,4 +55,17 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+@media screen and (max-width: 900px) {
+  #input-group {
+    width: 100vw;
+    margin-bottom: 1rem;
+  }
+
+  .btn-add-cart {
+    margin: 0;
+    padding: 0.6rem 0;
+    width: 100vw;
+  }
 }
